change the updatelocation and social prefernces